# rust-cohort

./: .gitignore  README.md
course_selling_backend/: Cargo.toml
course_selling_backend/src/: jwt.rs  main.rs
course_selling_backend/src/middleware/: auth.rs
course_selling_backend/src/models/: admin_model.rs  course_model.rs  mod.rs  (+2 more)
crud/crud/: .env  Cargo.toml
crud/crud/migrations/: 001_create_users_table.sql
crud/crud/src/: handlers.rs  main.rs  models.rs
jwt/: Cargo.toml
jwt/src/: main.rs
latex-service/: .dockerignore  Cargo.toml  Dockerfile  README.md
latex-service/src/: main.rs
resume_craft/: README.md
resume_craft/resume-frontend/: package-lock.json  package.json
resume_craft/resume_back/: Cargo.toml  READ.MD
resume_craft/resume_back/src/: form.html  main.rs
resume_craft/resume_back/src/controllers/: ai_controller.rs  mod.rs  resume_controller.rs
resume_craft/resume_back/src/handlers/: mod.rs  resume_handler.rs  user_handlers.rs
resume_craft/resume_back/src/middleware/: auth.rs
resume_craft/resume_back/src/models/: certifications.rs  common.rs  education.rs  experience.rs  mod.rs  profile.rs  projects.rs  resume.rs  skills.rs  users.rs
resume_craft/resume_back/src/utils/: ai.rs  jwt.rs  mod.rs  pdf.rs  resume_parser.rs
resume_craft/resume_back/src/utils/resume_utils/: certifications_utils.rs  education_utils.rs  experience_utils.rs  latex_utils.rs  mod.rs  personal_utils.rs  project_utils.rs  resume_utils.rs  skill_utils.rs
rust-todo/backend/: Cargo.toml  todos.json
rust-todo/frotnend/: package-lock.json  package.json
(+50 files in other folders)
